discussion/kv_engine/173472/173472_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Continue/Cancel RangeScan on an I/O task

Add RangeScanContinueTask (READER) which is a task to be scheduled
in response to scan continue or cancel requests.

For continue, the "scanning" occurs on the I/O task.
For cancel, the destruct (close of snapshot) occurs on the I/O task.

In this commit the task "model" is intentionally simple, 1 new task
created per continue or cancel. The focus of the commit is the
scan continue/cancel logic and a future commit will look to improve
the task model by limiting the tasks and/or limiting the concurrency.

Change-Id: I96daac2c6b81da145f21754e17c519de13cafc03

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-04-22 11:12:20.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-22 12:18:57.000000000
Message: 
Patch Set 8: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38243/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan.h:176:12:
error: no template named "Synchronized" in namespace "folly"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38243/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16890/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.h:176:12: error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
    folly::Synchronized<RunState> runState;
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16890/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.h:176:12:
error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16890/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6549/ : FAILURE

Compile error at [2022-04-22T11:13:59.217Z] ../kv_engine/engines/ep/src/configuration.h:185:10:
fatal error: "generated_configuration.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6549/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19015/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19015/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18674/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction
[2022-04-22T11:19:08.878Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1225: Failure
[2022-04-22T11:19:08.878Z] Expected equality of these values:
[2022-04-22T11:19:08.878Z]   100
[2022-04-22T11:19:08.878Z]   getRRPercent(*store->getVBucket(vbid))
[2022-04-22T11:19:08.878Z]     Which is: 94
[2022-04-22T11:19:08.878Z] vb:0 not fully resident after eviction
[2022-04-22T11:19:08.878Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1225: Failure
[2022-04-22T11:19:08.878Z] Expected equality of these values:
[2022-04-22T11:19:08.878Z]   100
[2022-04-22T11:19:08.878Z]   getRRPercent(*store->getVBucket(vbid))
[2022-04-22T11:19:08.878Z]     Which is: 97
[2022-04-22T11:19:08.878Z] vb:1 not fully resident after eviction
[2022-04-22T11:19:08.878Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=full_eviction" (552 ms)
EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18674/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27083/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6635/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6635/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45520/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15858/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17775/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19713/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-22 13:57:09.000000000
Message: 
Patch Set 8: Verified-1 -Code-Review

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27075/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27075/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6546/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6546/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19709/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19709/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18671/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18671/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19007/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19007/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17766/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17766/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6608/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
